# raspirus

./: .gitignore  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS  Cargo.toml  Dockerfile  Makefile  PKGBUILD  README.md  tailwindcss.exe.REMOVED.git-id
.github/workflows/: choco_release.yml  flatpak.yml  release.yml  testproject.yml
build_utils/unix/: Dockerfile  Makefile
build_utils/unix/snap/: snapcraft.yaml
build_utils/unix/snap/gui/: raspirus.desktop
build_utils/windows/: 1setup_winget.ps1  2setup_dependencies.bat  3setup_msys.bat  3setup_rust.bat  4setup_pipx.bat  4update_path.bat  5setup_gvsbuild.bat  5setup_gvsbuild_git.bat  5setup_rust.bat  5setup_rust.ps1  6build_gtk.bat  7setup_env.bat  Makefile  manual.bat
chocolatey/raspirus/: raspirus.nuspec
chocolatey/raspirus/tools/: chocolateyinstall.ps1
data/: io.github.raspirus.raspirus.desktop  io.github.raspirus.raspirus.metainfo.xml  io.github.raspirus.raspirus.xml
flatpak/: .test.txt  generated-sources.json  org.raspirus.app.desktop  org.raspirus.app.json  org.raspirus.app.metainfo.xml  org.raspirus.app.yml
packaging/chocolatey/tools/: chocolateyuninstall.ps1
snap/: snapcraft.yaml
snap/gui/: raspirus.desktop
src/: arguments.rs  error.rs  globals.rs  main.rs
src-tauri/: signatures.db.REMOVED.git-id
src/assets/locales/: de.json  en.json  fr.json  it.json
src/backend/: config.rs  config_file.rs  downloader.rs  log.rs  mod.rs  scanner.rs  updater.rs  yara_scanner.rs
src/backend/old/: config_file.rs  yara_scanner.rs
src/backend/scanner/: index.rs  log.rs  mod.rs  scanner.rs  structs.rs
src/backend/utils/: generic.rs  mod.rs  pdf_gen.rs
src/frontend/: app.rs  frontend.rs  iced.rs  mod.rs  window.rs
src/frontend/main/: messages.rs  mod.rs  model.rs  widget.rs
src/frontend/pages/: about.rs  conditions.rs  mod.rs  results.rs  scanning.rs  settings.rs
src/frontend/panels/: main_menu.rs  results.rs  scanning.rs  settings.rs
src/frontend/theme/: svg.rs
src/tests/: config_file_test.rs  file_log_test.rs  file_scanner_test.rs
testing/files/: dummy3.txt.REMOVED.git-id
(+4 files in other folders)
